--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>violet.creation</groupId>
+    <groupId>violet.aigc</groupId>
     <artifactId>common</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>creation</name>
-    <description>creation</description>
+    <name>aigc</name>
+    <description>aigc</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -116,7 +116,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>violet.creation.common.CreationApplication</mainClass>
+                    <mainClass>violet.aigc.common.AigcApplication</mainClass>
                     <skip>true</skip>
                 </configuration>
                 <executions>
@@ -139,7 +139,7 @@
                     <!--                    <protocArtifact>com.google.protobuf:protoc:3.3.0:exe:osx-x86_64</protocArtifact>-->
                     <!--                    <pluginId>grpc-java</pluginId>-->
                     <!--                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.6.1:exe:osx-x86_64</pluginArtifact>-->
-                    <protoSourceRoot>${project.basedir}/src/main/java/violet/creation/common</protoSourceRoot>
+                    <protoSourceRoot>${project.basedir}/src/main/java/violet/aigc/common</protoSourceRoot>
                     <outputDirectory>${project.basedir}/src/main/java</outputDirectory>
                     <clearOutputDirectory>false</clearOutputDirectory>
                 </configuration>
